--- a/Tax.html
+++ b/Tax.html
@@ -106,11 +106,11 @@
                         <div>
                             <p class="heading divMarginAndPaddingHeading">Total Tax</p>
                             <p class="inputData divMarginAndPaddingInput">
-                                <input type="number">
+                                <input id="TotalTax" type="number">
                             </p>
                             <p class="heading divMarginAndPaddingHeading">Grand Total</p>
                             <p class="inputData divMarginAndPaddingInput">
-                                <input type="number">
+                                <input id="GrandTotal" type="number">
                             </p>
                         </div>
 
@@ -128,6 +128,7 @@
                      var _assesedValue = AssesedValue(convertedToRs);
                      document.getElementById('assessedValue').value = _assesedValue.toString();
                     Taxes(_assesedValue);     
+                    
                 }
 
                 function AssesedValue(costRs){
@@ -154,9 +155,18 @@
                     taxes[3] = (taxes[0]+taxes[1]+taxes[2])*taxes[3]/100;
 
                     var sum = taxes[0]+taxes[1]+taxes[2]+taxes[3];
-                    alert(sum);
-                    
+                    document.getElementById("TotalTax").value = sum.toFixed(2).toString();
+                    GrandTotal(sum, assesedValue);    
                 }            
+
+                function GrandTotal(sumOfTax, assesedValue){
+
+                    var _grandTotal = sumOfTax+assesedValue;
+
+
+                    document.getElementById("GrandTotal").value = _grandTotal.toFixed(2).toString(); 
+
+                }
             </script>
 
 
