--- a/Tax.html
+++ b/Tax.html
@@ -16,6 +16,9 @@
 
     <body>
         <div id="backgroundImage">
+            <button id="HomeButton">
+                Home
+            </button>
             <div id="gridView">
                 <div > 
                     <p class="heading divMarginAndPaddingHeading">Enter Item Name</p>
